# src/ViajantesTurismo.Catalog.Contracts.Http/OpenApi/v1.openapi.json
@@ -135,6 +135,10 @@
           "content": {
             "multipart/form-data": {
               "schema": {
+                "required": [
+                  "file",
+                  "altText"
+                ],
                 "type": "object",
                 "allOf": [
                   {
@@ -146,16 +150,36 @@
                     }
                   },
                   {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "altText": {
+                        "type": "string"
+                      }
+                    }
                   },
                   {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "caption": {
+                        "type": "string"
+                      }
+                    }
                   },
                   {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "attribution": {
+                        "type": "string"
+                      }
+                    }
                   },
                   {
-                    "type": "string"
+                    "type": "object",
+                    "properties": {
+                      "copyright": {
+                        "type": "string"
+                      }
+                    }
                   }
                 ]
               }
@@ -170,8 +194,8 @@
         }
       }
     },
-    "/api/v1/catalog/media/images/{id}": {
-      "put": {
+    "/api/v1/catalog/media/images/{id}/preview/{width}/{format}": {
+      "get": {
         "tags": [
           "CatalogEndpoints"
         ],
@@ -184,18 +208,26 @@
               "type": "string",
               "format": "uuid"
             }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/PublicMediaImageDto"
-              }
+          },
+          {
+            "name": "width",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "pattern": "^-?(?:0|[1-9]\\d*)$",
+              "type": "integer",
+              "format": "int32"
             }
           },
-          "required": true
-        },
+          {
+            "name": "format",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -313,42 +345,7 @@
         }
       }
     },
-    "/api/v1/public/catalog/media/{id}": {
-      "get": {
-        "tags": [
-          "CatalogEndpoints"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "name": "width",
-            "in": "query",
-            "schema": {
-              "pattern": "^-?(?:0|[1-9]\\d*)$",
-              "type": [
-                "integer",
-                "string"
-              ],
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/public/catalog/media/{id}/{width}": {
+    "/api/v1/public/catalog/media/{id}/{width}/{format}": {
       "get": {
         "tags": [
           "CatalogEndpoints"
@@ -371,6 +368,14 @@
               "pattern": "^-?(?:0|[1-9]\\d*)$",
               "type": "integer",
               "format": "int32"
+            }
+          },
+          {
+            "name": "format",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
           }
         ],
@@ -505,6 +510,52 @@
   },
   "components": {
     "schemas": {
+      "CatalogMediaImageVariantDto": {
+        "required": [
+          "width",
+          "height",
+          "contentType",
+          "fileSizeBytes"
+        ],
+        "type": "object",
+        "properties": {
+          "width": {
+            "maximum": 2147483647,
+            "minimum": 1,
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int32"
+          },
+          "height": {
+            "maximum": 2147483647,
+            "minimum": 1,
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int32"
+          },
+          "contentType": {
+            "maxLength": 128,
+            "minLength": 1,
+            "type": "string"
+          },
+          "fileSizeBytes": {
+            "maximum": 9223372036854776000,
+            "minimum": 1,
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int64"
+          }
+        }
+      },
       "CatalogTourDto": {
         "required": [
           "id",
@@ -558,15 +609,19 @@
       },
       "CatalogTourImageDto": {
         "required": [
+          "id",
           "sortOrder",
           "isCover",
-          "uri",
           "altText",
           "isDecorative",
           "responsiveVariants"
         ],
         "type": "object",
         "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
           "sortOrder": {
             "maximum": 2147483647,
             "minimum": 0,
@@ -579,10 +634,6 @@
           },
           "isCover": {
             "type": "boolean"
-          },
-          "uri": {
-            "type": "string",
-            "format": "uri"
           },
           "altText": {
             "maxLength": 256,
@@ -601,9 +652,10 @@
             ]
           },
           "responsiveVariants": {
+            "minItems": 1,
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/MediaImageResponsiveVariantDto"
+              "$ref": "#/components/schemas/CatalogMediaImageVariantDto"
             }
           }
         }
@@ -611,122 +663,6 @@
       "IFormFile": {
         "type": "string",
         "format": "binary"
-      },
-      "MediaImageDimensionsDto": {
-        "required": [
-          "width",
-          "height"
-        ],
-        "type": "object",
-        "properties": {
-          "width": {
-            "maximum": 2147483647,
-            "minimum": 1,
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int32"
-          },
-          "height": {
-            "maximum": 2147483647,
-            "minimum": 1,
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int32"
-          }
-        }
-      },
-      "MediaImageProcessingStatusDto": {
-        "type": "integer"
-      },
-      "MediaImageResponsiveVariantDto": {
-        "required": [
-          "uri",
-          "width",
-          "height",
-          "contentType",
-          "fileSizeBytes"
-        ],
-        "type": "object",
-        "properties": {
-          "objectKey": {
-            "type": [
-              "null",
-              "string"
-            ]
-          },
-          "uri": {
-            "type": "string",
-            "format": "uri"
-          },
-          "width": {
-            "maximum": 2147483647,
-            "minimum": 1,
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int32"
-          },
-          "height": {
-            "maximum": 2147483647,
-            "minimum": 1,
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int32"
-          },
-          "contentType": {
-            "maxLength": 128,
-            "minLength": 1,
-            "type": "string"
-          },
-          "fileSizeBytes": {
-            "maximum": 9223372036854776000,
-            "minimum": 1,
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int64"
-          }
-        }
-      },
-      "MediaImageTourLinkDto": {
-        "required": [
-          "catalogTourId",
-          "displayOrder",
-          "isCover"
-        ],
-        "type": "object",
-        "properties": {
-          "catalogTourId": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "displayOrder": {
-            "maximum": 2147483647,
-            "minimum": 0,
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int32"
-          },
-          "isCover": {
-            "type": "boolean"
-          }
-        }
       },
       "PublicContentDto": {
         "type": "object",
@@ -782,45 +718,6 @@
             ]
           },
           "requiresHumanReview": {
-            "type": "boolean"
-          }
-        }
-      },
-      "PublicMediaAccessibilityTextDto": {
-        "required": [
-          "language",
-          "isDecorative",
-          "requiresHumanReview",
-          "isAiGenerated"
-        ],
-        "type": "object",
-        "properties": {
-          "language": {
-            "$ref": "#/components/schemas/PublicContentLanguageDto"
-          },
-          "altText": {
-            "maxLength": 256,
-            "minLength": 0,
-            "type": [
-              "null",
-              "string"
-            ]
-          },
-          "caption": {
-            "maxLength": 256,
-            "minLength": 0,
-            "type": [
-              "null",
-              "string"
-            ]
-          },
-          "isDecorative": {
-            "type": "boolean"
-          },
-          "requiresHumanReview": {
-            "type": "boolean"
-          },
-          "isAiGenerated": {
             "type": "boolean"
           }
         }
@@ -894,130 +791,6 @@
           },
           "isDecorative": {
             "type": "boolean"
-          }
-        }
-      },
-      "PublicMediaImageDto": {
-        "required": [
-          "id",
-          "sourceUri",
-          "checksum",
-          "contentType",
-          "fileSizeBytes",
-          "dimensions",
-          "processingStatus",
-          "responsiveVariants",
-          "tags",
-          "tourLinks",
-          "altText",
-          "isDecorative",
-          "requiresHumanReview",
-          "isAiGenerated",
-          "accessibilityTexts"
-        ],
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "sourceObjectKey": {
-            "type": [
-              "null",
-              "string"
-            ]
-          },
-          "sourceUri": {
-            "type": "string",
-            "format": "uri"
-          },
-          "checksum": {
-            "maxLength": 128,
-            "minLength": 1,
-            "type": "string"
-          },
-          "contentType": {
-            "maxLength": 128,
-            "minLength": 1,
-            "type": "string"
-          },
-          "fileSizeBytes": {
-            "maximum": 9223372036854776000,
-            "minimum": 1,
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int64"
-          },
-          "dimensions": {
-            "$ref": "#/components/schemas/MediaImageDimensionsDto"
-          },
-          "processingStatus": {
-            "$ref": "#/components/schemas/MediaImageProcessingStatusDto"
-          },
-          "responsiveVariants": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/MediaImageResponsiveVariantDto"
-            }
-          },
-          "tags": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "tourLinks": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/MediaImageTourLinkDto"
-            }
-          },
-          "altText": {
-            "maxLength": 256,
-            "minLength": 0,
-            "type": "string"
-          },
-          "caption": {
-            "maxLength": 256,
-            "minLength": 0,
-            "type": [
-              "null",
-              "string"
-            ]
-          },
-          "isDecorative": {
-            "type": "boolean"
-          },
-          "requiresHumanReview": {
-            "type": "boolean"
-          },
-          "isAiGenerated": {
-            "type": "boolean"
-          },
-          "accessibilityTexts": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/PublicMediaAccessibilityTextDto"
-            }
-          },
-          "attribution": {
-            "maxLength": 256,
-            "minLength": 0,
-            "type": [
-              "null",
-              "string"
-            ]
-          },
-          "copyright": {
-            "maxLength": 256,
-            "minLength": 0,
-            "type": [
-              "null",
-              "string"
-            ]
           }
         }
       },
